fixed numerous errors, including those in tutorial which indicated wrong margin for main

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
 /* Google Import Fonts */
-
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Oswald:wght@200..700&display=swap');
 
 /* Asterisk wildcard selector to override default styles added in the browser */
@@ -90,7 +89,7 @@ nav {
 
 main    {
     background-color:lightblue;
-    /* make main element take up any suplus space to push footer down */
+    /* make main element take up any suprlus space to push footer down */
     flex: 1 0 auto;
     margin-top:47px;
 }
@@ -105,36 +104,38 @@ footer  {
 @media screen and (min-width: 768px)    {
     /* Header */
     nav {
-        display:block;
-        position:relative;
+        display: block;
+        position: relative;
         box-shadow: none;
         width: fit-content;
         padding-right: 1rem;
     }
-    
+
     #menu {
-        display:flex
+        display: flex;
     }
     #menu > li {
         padding-left: 1rem;
     }
 
     .nav-toggle-label   {
-        display:none;
+        display: none;
     }
 
     #logo   {
-        font-size:280%;
+        font-size: 280%;
         line-height: 75px;
-        margin: 0 0.5rem
+        margin: 0.5rem
     }
 
     /* Main content */
     main    {
-        margin-top:79px;
+        margin-top:91px;
     }
 }
 
+
+/* Large devices (laptops and desktops, 992px and above)*/
 @media screen and (min-width: 992px)    {
     #menu a:hover    {
         border-bottom: 1px solid #3a3a3a;
